// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isValidBtn renders correctly when isValid is false 1`] = `
<button
  className="bg-soma-grey-30 text-soma-grey-45 py-2 px-3.5 rounded-3xl mx-1 transition hover:bg-soma-blue-20 hover:text-soma-blue-50"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  text
</button>
`;

exports[`isValidBtn renders correctly when isValid is true 1`] = `
<button
  className="bg-soma-blue-20 text-soma-blue-50 py-2 px-3.5 rounded-3xl mx-1 transition hover:bg-soma-blue-20 hover:text-soma-blue-50"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  text
</button>
`;
